// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create methods calls onComplete 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
    contentInset={
      Object {
        "bottom": 96,
      }
    }
    style={
      Object {
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        blurOnSubmit={true}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="New Challenge"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": undefined,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomWidth": 0,
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 30,
              "marginBottom": 16,
              "paddingHorizontal": 32,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
          ]
        }
        testID="titleInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="New Title"
      />
      <DatePicker
        date={2020-02-13T00:00:00.000Z}
        minimumDate={2020-02-13T00:00:00.000Z}
        mode="date"
        onDateChange={[Function]}
        testID="datePicker"
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "paddingHorizontal": 32,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#939393",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            February 13, 2020
          </Text>
        </View>
      </DatePicker>
      <View
        style={
          Object {
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "paddingHorizontal": 32,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#939393",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Details
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={true}
          autoFocus={false}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Add details to your Challenge (optional)"
          placeholderTextColor="#3CC8E6"
          rejectResponderTermination={true}
          scrollEnabled={false}
          selectionColor="#3CC8E6"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": undefined,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "borderBottomWidth": 0,
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginBottom": 26,
                "paddingBottom": 70,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="detailInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value="New details for my challenge"
        />
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#3CC8E6",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 0.6,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              null,
            ],
          ]
        }
      >
        CREATE CHALLENGE
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`create methods changes date 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -173,11 +173,11 @@
          testID=\\"titleInput\\"
          underlineColorAndroid=\\"rgba(0,0,0,0)\\"
          value=\\"\\"
        />
        <DatePicker
-         date={Date { NaN }}
+         date={2020-02-13T00:00:00.000Z}
          minimumDate={2020-02-13T00:00:00.000Z}
          mode=\\"date\\"
          onDateChange={[Function onChangeDate]}
          testID=\\"datePicker\\"
        >
@@ -218,11 +218,11 @@
                  \\"textAlignVertical\\": \\"center\\",
                  \\"textTransform\\": \\"none\\",
                }
              }
            >
-             End Date (Required)
+             February 13, 2020
            </Text>
          </View>
        </DatePicker>
        <View
          style={"
`;

exports[`create methods changes detail 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -292,11 +292,11 @@
                },
              ]
            }
            testID=\\"detailInput\\"
            underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-           value=\\"\\"
+           value=\\"New details for my challenge\\"
          />
        </View>
      </View>
    </RCTScrollView>
    <Image"
`;

exports[`create methods changes title 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -170,11 +170,11 @@
              },
            ]
          }
          testID=\\"titleInput\\"
          underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-         value=\\"\\"
+         value=\\"New Title For My Challenge\\"
        />
        <DatePicker
          date={Date { NaN }}
          minimumDate={2020-02-13T00:00:00.000Z}
          mode=\\"date\\""
`;

exports[`create methods clears date 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -173,11 +173,11 @@
          testID=\\"titleInput\\"
          underlineColorAndroid=\\"rgba(0,0,0,0)\\"
          value=\\"\\"
        />
        <DatePicker
-         date={2020-02-13T00:00:00.000Z}
+         date={Date { NaN }}
          minimumDate={2020-02-13T00:00:00.000Z}
          mode=\\"date\\"
          onDateChange={[Function onChangeDate]}
          testID=\\"datePicker\\"
        >
@@ -218,11 +218,11 @@
                  \\"textAlignVertical\\": \\"center\\",
                  \\"textTransform\\": \\"none\\",
                }
              }
            >
-             February 13, 2020
+             End Date (Required)
            </Text>
          </View>
        </DatePicker>
        <View
          style={"
`;

exports[`create methods fires onBlur | detailInput 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -256,11 +256,11 @@
            multiline={true}
            onBlur={[Function onBlur]}
            onChangeText={[Function onChangeText]}
            onFocus={[Function onFocus]}
            placeholder=\\"Add details to your Challenge (optional)\\"
-           placeholderTextColor=\\"#B4B6BA\\"
+           placeholderTextColor=\\"#3CC8E6\\"
            rejectResponderTermination={true}
            scrollEnabled={false}
            selectionColor=\\"#3CC8E6\\"
            style={
              Array ["
`;

exports[`create methods fires onBlur | titleInput 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -134,11 +134,11 @@
          multiline={true}
          onBlur={[Function onBlur]}
          onChangeText={[Function onChangeTitle]}
          onFocus={[Function onFocus]}
          placeholder=\\"New Challenge\\"
-         placeholderTextColor=\\"#B4B6BA\\"
+         placeholderTextColor=\\"#3CC8E6\\"
          rejectResponderTermination={true}
          returnKeyType=\\"done\\"
          selectionColor=\\"#3CC8E6\\"
          style={
            Array ["
`;

exports[`create methods focuses on press | detailInput 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -256,11 +256,11 @@
            multiline={true}
            onBlur={[Function onBlur]}
            onChangeText={[Function onChangeText]}
            onFocus={[Function onFocus]}
            placeholder=\\"Add details to your Challenge (optional)\\"
-           placeholderTextColor=\\"#3CC8E6\\"
+           placeholderTextColor=\\"#B4B6BA\\"
            rejectResponderTermination={true}
            scrollEnabled={false}
            selectionColor=\\"#3CC8E6\\"
            style={
              Array ["
`;

exports[`create methods focuses on press | titleInput 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -134,11 +134,11 @@
          multiline={true}
          onBlur={[Function onBlur]}
          onChangeText={[Function onChangeTitle]}
          onFocus={[Function onFocus]}
          placeholder=\\"New Challenge\\"
-         placeholderTextColor=\\"#3CC8E6\\"
+         placeholderTextColor=\\"#B4B6BA\\"
          rejectResponderTermination={true}
          returnKeyType=\\"done\\"
          selectionColor=\\"#3CC8E6\\"
          style={
            Array ["
`;

exports[`create methods sets disable false 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -170,14 +170,14 @@
              },
            ]
          }
          testID=\\"titleInput\\"
          underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-         value=\\"\\"
+         value=\\"New Title\\"
        />
        <DatePicker
-         date={Date { NaN }}
+         date={2020-02-13T00:00:00.000Z}
          minimumDate={2020-02-13T00:00:00.000Z}
          mode=\\"date\\"
          onDateChange={[Function onChangeDate]}
          testID=\\"datePicker\\"
        >
@@ -218,11 +218,11 @@
                  \\"textAlignVertical\\": \\"center\\",
                  \\"textTransform\\": \\"none\\",
                }
              }
            >
-             End Date (Required)
+             February 13, 2020
            </Text>
          </View>
        </DatePicker>
        <View
          style={
@@ -335,11 +335,11 @@
        onResponderTerminationRequest={[Function onResponderTerminationRequest]}
        onStartShouldSetResponder={[Function onStartShouldSetResponder]}
        style={
          Object {
            \\"alignItems\\": \\"center\\",
-           \\"backgroundColor\\": \\"#B4B6BA\\",
+           \\"backgroundColor\\": \\"#3CC8E6\\",
            \\"borderRadius\\": 50,
            \\"height\\": 48,
            \\"justifyContent\\": \\"center\\",
            \\"opacity\\": 0.6,
            \\"width\\": 650,
@@ -360,13 +360,11 @@
                \\"textAlign\\": \\"center\\",
                \\"textAlignVertical\\": \\"center\\",
                \\"textTransform\\": \\"uppercase\\",
              },
              Array [
-               Object {
-                 \\"backgroundColor\\": \\"#B4B6BA\\",
-               },
+               null,
              ],
            ]
          }
        >
          CREATE CHALLENGE"
`;

exports[`edit methods Saves challenge when user updates detail 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -356,11 +356,11 @@
                },
              ]
            }
            testID=\\"detailInput\\"
            underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-           value=\\"New details for my challenge\\"
+           value=\\"\\"
          />
        </View>
      </View>
    </RCTScrollView>
    <Image"
`;

exports[`edit methods calls onComplete 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginRight": 10,
              "opacity": 1,
            }
          }
          testID="editButton"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Bold",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#3CC8E6",
                  "fontSize": 14,
                },
              ]
            }
          >
            SAVE
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
    contentInset={
      Object {
        "bottom": 96,
      }
    }
    style={
      Object {
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        blurOnSubmit={true}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Edit Challenge"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": undefined,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomWidth": 0,
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 30,
              "marginBottom": 16,
              "paddingHorizontal": 32,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
          ]
        }
        testID="titleInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Old Title"
      />
      <DatePicker
        date={2020-02-13T23:59:59.999Z}
        minimumDate={2020-02-13T00:00:00.000Z}
        mode="date"
        onDateChange={[Function]}
        testID="datePicker"
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "paddingHorizontal": 32,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#939393",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            February 13, 2020
          </Text>
        </View>
      </DatePicker>
      <View
        style={
          Object {
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "paddingHorizontal": 32,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#939393",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Details
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={true}
          autoFocus={false}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Add details to your Challenge (optional)"
          placeholderTextColor="#3CC8E6"
          rejectResponderTermination={true}
          scrollEnabled={false}
          selectionColor="#3CC8E6"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": undefined,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "borderBottomWidth": 0,
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginBottom": 26,
                "paddingBottom": 70,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="detailInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value="New details for my challenge"
        />
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
</View>
`;

exports[`edit methods disables button if user deletes title 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -234,11 +234,11 @@
              },
            ]
          }
          testID=\\"titleInput\\"
          underlineColorAndroid=\\"rgba(0,0,0,0)\\"
-         value=\\"Old Title\\"
+         value=\\"\\"
        />
        <DatePicker
          date={2020-02-13T23:59:59.999Z}
          minimumDate={2020-02-13T00:00:00.000Z}
          mode=\\"date\\""
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
    contentInset={
      Object {
        "bottom": 96,
      }
    }
    style={
      Object {
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        blurOnSubmit={true}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="New Challenge"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": undefined,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomWidth": 0,
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 30,
              "marginBottom": 16,
              "paddingHorizontal": 32,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
          ]
        }
        testID="titleInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
      <DatePicker
        date={Date { NaN }}
        minimumDate={2020-02-13T00:00:00.000Z}
        mode="date"
        onDateChange={[Function]}
        testID="datePicker"
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "paddingHorizontal": 32,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#939393",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            End Date (Required)
          </Text>
        </View>
      </DatePicker>
      <View
        style={
          Object {
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "paddingHorizontal": 32,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#939393",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Details
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={true}
          autoFocus={false}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Add details to your Challenge (optional)"
          placeholderTextColor="#3CC8E6"
          rejectResponderTermination={true}
          scrollEnabled={false}
          selectionColor="#3CC8E6"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": undefined,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "borderBottomWidth": 0,
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginBottom": 26,
                "paddingBottom": 70,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="detailInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value=""
        />
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#B4B6BA",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 0.6,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              Object {
                "backgroundColor": "#B4B6BA",
              },
            ],
          ]
        }
      >
        CREATE CHALLENGE
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders correctly on android 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      />
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              Object {
                "alignItems": "flex-end",
                "alignSelf": "flex-end",
              },
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Image
              source={
                Object {
                  "testUri": "../../../assets/images/closeButton.png",
                }
              }
              style={
                Object {
                  "margin": 10,
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
    contentInset={
      Object {
        "bottom": 96,
      }
    }
    style={
      Object {
        "marginBottom": 80,
      }
    }
  >
    <View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        blurOnSubmit={true}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="New Challenge"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": undefined,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomWidth": 0,
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 30,
              "marginBottom": 16,
              "paddingHorizontal": 32,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
          ]
        }
        testID="titleInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value=""
      />
      <DatePicker
        date={Date { NaN }}
        minimumDate={2020-02-13T00:00:00.000Z}
        mode="date"
        onDateChange={[Function]}
        testID="datePicker"
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "paddingHorizontal": 32,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#939393",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            End Date (Required)
          </Text>
        </View>
      </DatePicker>
      <View
        style={
          Object {
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "paddingHorizontal": 32,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#939393",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Details
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={true}
          autoFocus={false}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Add details to your Challenge (optional)"
          placeholderTextColor="#3CC8E6"
          rejectResponderTermination={true}
          scrollEnabled={false}
          selectionColor="#3CC8E6"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": undefined,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "borderBottomWidth": 0,
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginBottom": 26,
                "paddingBottom": 70,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="detailInput"
          underlineColorAndroid="rgba(0,0,0,0)"
          value=""
        />
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "bottom": 20,
        "left": 50,
        "position": "absolute",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#B4B6BA",
          "borderRadius": 50,
          "height": 48,
          "justifyContent": "center",
          "opacity": 0.6,
          "width": 650,
        }
      }
      testID="bottomButton"
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Bold",
              "fontSize": 14,
              "fontStyle": "normal",
              "letterSpacing": 1,
              "lineHeight": 18,
              "textAlign": "center",
              "textAlignVertical": "center",
              "textTransform": "uppercase",
            },
            Array [
              Object {
                "backgroundColor": "#B4B6BA",
              },
            ],
          ]
        }
      >
        CREATE CHALLENGE
      </Text>
    </View>
  </RCTSafeAreaView>
</View>
`;

exports[`renders edit challenge correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "flexDirection": "column",
    }
  }
>
  <RCTSafeAreaView
    emulateUnlessSupported={true}
    style={
      Object {
        "backgroundColor": "transparent",
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "row",
            "height": 56,
            "paddingTop": 0,
          },
          undefined,
          null,
        ]
      }
    >
      <View
        style={
          Array [
            Object {
              "paddingLeft": 5,
            },
            Object {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "flex-start",
                "alignSelf": "flex-start",
                "justifyContent": "center",
              },
              undefined,
            ]
          }
        >
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "backgroundColor": "transparent",
                "opacity": 1,
              }
            }
            testID="IconButton"
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": undefined,
                    "fontSize": 12,
                  },
                  Array [
                    Object {
                      "color": "#ffffff",
                    },
                    Object {
                      "fontSize": 18,
                    },
                    Array [
                      Object {
                        "margin": 10,
                      },
                      Object {
                        "color": "#B4B6BA",
                      },
                    ],
                  ],
                  Object {
                    "fontFamily": "icomoon",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "paddingRight": 5,
            },
            Object {
              "alignItems": "flex-end",
              "flex": 1,
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "marginRight": 10,
              "opacity": 1,
            }
          }
          testID="editButton"
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "SourceSansPro-Bold",
                  "fontSize": 14,
                  "fontStyle": "normal",
                  "letterSpacing": 1,
                  "lineHeight": 18,
                  "textAlign": "center",
                  "textAlignVertical": "center",
                  "textTransform": "uppercase",
                },
                Object {
                  "color": "#3CC8E6",
                  "fontSize": 14,
                },
              ]
            }
          >
            SAVE
          </Text>
        </View>
      </View>
    </View>
  </RCTSafeAreaView>
  <RCTScrollView
    contentContainerStyle={
      Object {
        "alignItems": "stretch",
        "justifyContent": "center",
        "paddingTop": 10,
      }
    }
    contentInset={
      Object {
        "bottom": 96,
      }
    }
    style={
      Object {
        "marginBottom": undefined,
      }
    }
  >
    <View>
      <TextInput
        allowFontScaling={true}
        autoCorrect={true}
        autoFocus={true}
        blurOnSubmit={true}
        multiline={true}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholder="Edit Challenge"
        placeholderTextColor="#3CC8E6"
        rejectResponderTermination={true}
        returnKeyType="done"
        selectionColor="#3CC8E6"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderBottomColor": "#3CC8E6",
              "borderBottomWidth": 1,
              "color": "#ffffff",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 16,
              "fontStyle": "normal",
              "letterSpacing": 0.25,
              "lineHeight": undefined,
              "paddingVertical": 5,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
            Object {
              "borderBottomWidth": 0,
              "color": "#B4B6BA",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 24,
              "fontStyle": "normal",
              "lineHeight": 30,
              "marginBottom": 16,
              "paddingHorizontal": 32,
              "textAlignVertical": "center",
              "textTransform": "none",
            },
          ]
        }
        testID="titleInput"
        underlineColorAndroid="rgba(0,0,0,0)"
        value="Test Title"
      />
      <DatePicker
        date={2020-02-29T23:59:59.999Z}
        minimumDate={2020-02-13T00:00:00.000Z}
        mode="date"
        onDateChange={[Function]}
        testID="datePicker"
      >
        <View
          style={
            Object {
              "borderBottomWidth": 1,
              "borderColor": "#ECEEF2",
              "borderTopWidth": 1,
              "paddingHorizontal": 32,
              "paddingVertical": 16,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#939393",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 12,
                "fontStyle": "normal",
                "lineHeight": 16,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            Challenge Ends
          </Text>
          <Text
            style={
              Object {
                "color": "#3CC8E6",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "textAlignVertical": "center",
                "textTransform": "none",
              }
            }
          >
            February 29, 2020
          </Text>
        </View>
      </DatePicker>
      <View
        style={
          Object {
            "borderColor": "#ECEEF2",
            "borderTopWidth": 1,
            "paddingHorizontal": 32,
            "paddingVertical": 16,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "#939393",
              "fontFamily": "SourceSansPro-Regular",
              "fontSize": 12,
              "fontStyle": "normal",
              "lineHeight": 16,
              "textAlignVertical": "center",
              "textTransform": "none",
            }
          }
        >
          Details
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCorrect={true}
          autoFocus={false}
          multiline={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="Add details to your Challenge (optional)"
          placeholderTextColor="#3CC8E6"
          rejectResponderTermination={true}
          scrollEnabled={false}
          selectionColor="#3CC8E6"
          style={
            Array [
              Object {
                "backgroundColor": "transparent",
                "borderBottomColor": "#3CC8E6",
                "borderBottomWidth": 1,
                "color": "#ffffff",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "letterSpacing": 0.25,
                "lineHeight": undefined,
                "paddingVertical": 5,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
              Object {
                "borderBottomWidth": 0,
                "color": "#B4B6BA",
                "fontFamily": "SourceSansPro-Regular",
                "fontSize": 16,
                "fontStyle": "normal",
                "lineHeight": 24,
                "marginBottom": 26,
                "paddingBottom": 70,
                "textAlignVertical": "center",
                "textTransform": "none",
              },
            ]
          }
          testID="detailInput"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
    </View>
  </RCTScrollView>
  <Image
    source={
      Object {
        "testUri": "../../../assets/images/challengeDetailsTarget.png",
      }
    }
    style={
      Object {
        "bottom": 0,
        "position": "absolute",
        "right": 0,
        "zIndex": -1,
      }
    }
  />
</View>
`;
